# oakfield

./: .clang-format  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: pages.yml
backends/: README.md
backends/src/cpu/: backend_cpu.c
backends/src/cuda/: backend_cuda.cu
backends/src/metal/: backend_metal.mm  backend_metal_debug.mm
backends/src/metal/internal/: backend_metal_internal.h
benchmarks/: CMakeLists.txt  README.md  benchmark_core.c  benchmark_diffusion.c  benchmark_experimental_math.c  benchmark_integrators.c  benchmark_segmented_sieve.c  benchmark_special_functions.cpp
cmake/: EngineSources.cmake  PublicHeaderAudit.cmake  oakfieldConfig.cmake.in
core/: README.md
core/src/: async_logger.c  field.c  field_patch.c  graph_ir.c  graph_ir.h  kernel_ir.c  kernel_ir_builder.c  kernel_ir_eval.c  kernel_ir_eval_complex.c  kernel_ir_eval_domain.c  kernel_ir_mathview.c  neural_models.c  neural_tensor_map.c  operator.c  operator_identity.c  operator_semilinear.c  operator_semilinear.h  operator_split.c  plane_chart.c  sim_accel.h  sim_buffer.c  sim_context.c  sim_integrator_state.c  sim_noise_source.c  sim_runtime_state.c  sim_scheduler_state.c  sim_seed.c  sim_world.c  special_functions.c
core/src/field/: sim_field_stats.c  sim_field_stats_runtime.c  sim_field_topology.c  sim_field_topology_runtime.c  sim_flux_lens.c  sim_profiler.c
core/src/internal/: kernel_ir_internal.h  split_internal.h
core/src/math/: README.md  airy.c  bessel.c  digamma.c  digamma_square.c  finite_ladder.c  fourier.c  harmonic_ladder.c  loggamma.c  q_ladder.c  qdigamma.c  qnumber.c  qzeta.c  special_common.c  special_defaults.c  special_diagnostics.c  special_eval.c  special_mp.c  tetragamma.c  theta.c  trigamma.c  xi.c  zeta.c
core/src/math/internal/: polygamma_internal.h  theta_internal.h
core/src/operators/: README.md
core/src/operators/advection/: analytic_warp.c  curl.c  divergence.c  gradient.c  spatial_derivative.c
core/src/operators/common/: fft_plan.c  nd_neighbors.c  (+5 more)
docs/: Doxyfile.in  api-groups.dox  comment-style.md  oakfield-doxygen.css  roadmap.md
docs/doxygen-awesome/: README.md
examples/: CMakeLists.txt  README.md  cpu_backend_kernel.c  integrator_rk4.c  minimal_field.c  operator_context.c  special_math.c  stochastic_noise.c
include/oakfield/: async_logger.h  backend.h  core.h  field.h  field_patch.h  integrator.h  integrator_registry.h  integrators.h  kernel_ir.h  kernel_ir_mathview.h  math.h  neural_models.h  neural_tensor_map.h  operator.h  operator_identity.h  operator_split.h  plane_chart.h  sim.h  sim_buffer.h  sim_context.h  sim_diagnostics.h  sim_field_stats.h  sim_field_stats_runtime.h  sim_field_topology.h  sim_field_topology_runtime.h  sim_flux_lens.h  sim_integrator_state.h  sim_noise_source.h  sim_profiler.h  sim_runtime_state.h  sim_scheduler_state.h  sim_seed.h  sim_world.h
include/oakfield/math/: airy.h  bessel.h  fourier.h  loggamma.h  special_functions.h  theta.h  xi.h  zeta.h
include/oakfield/operators/: basic.h  operators.h  stimulus.h
integrators/: README.md
integrators/src/: backward_euler.c  crank_nicolson.c  etdrk4.c  euler.c  heun.c  integrator.c  integrator_registry.c  rk4.c  rkf45.c  subordination.c
tests/: CMakeLists.txt  README.md
tests/backends/: test_backend_cpu_vdsp.c  test_backend_support_levels.c  test_metal_mix.c
tests/core/: test_field_buffer_smoke.c  test_field_legacy_contracts.c  test_field_patch.c  test_graph_ir_policy.c  test_neural_tensor_map.c  test_plane_chart_stimulus_compat.c  test_pole_field.c  test_scalar_domain_legacy_contracts.c
tests/integrators/: test_continuous_time_dt_refinement.c  test_etdrk4.c  test_integrator_regression.c  test_subordination_dt_scaling.c
tests/math/: test_experimental_q_methods_smoke.c  test_riemann_phase1.c  test_special_fallback_hooks.c  test_special_math_smoke.c  test_zeta_smoke.c
tests/operators/: test_nonstimulus_dt_scaling.c  test_real_value_support.c
tests/operators/advection/: test_analytic_warp.c  test_analytic_warp_complex.c  test_analytic_warp_complex_polar.c  test_curl_complex.c  test_divergence_complex.c  test_spatial_derivative.c
tests/operators/coupling/: test_mixer_complex.c
tests/operators/diffusion/: test_dispersion.c  test_fractional_memory_complex.c  test_linear_dissipative_fft.c  test_linear_spectral_fusion.c
tests/operators/discrete/: test_discrete_ops.c
tests/operators/measurement/: test_sdr_observer_operator.c  test_sdr_observer_status.c  test_sieve_complex.c
tests/operators/noise/: test_ornstein_uhlenbeck_complex.c  test_ornstein_uhlenbeck_real.c  test_stochastic_noise_complex.c
tests/operators/nonlinear/: test_hysteretic_complex.c
tests/operators/reaction/: test_remainder_complex.c  test_remainder_complex_polar.c  test_remainder_real_to_complex.c
tests/operators/stimulus/: test_airy_beam_complex.c  test_bessel_beam_complex.c  test_checkerboard_coords.c  test_chladni_complex.c  test_coords_2d.c  test_cylindrical_wave_emitter_complex.c  test_digamma_square_complex_contracts.c  test_dt_scaling.c  test_fbm_complex.c  test_gabor_complex.c  test_gaussian_complex.c  test_heat_kernel_complex.c  test_hermite_gaussian_beam_complex.c  test_hybrid_fbm_complex.c  test_laplace_beltrami_complex.c  test_lissajous_complex.c  test_log_polar_complex.c  test_log_spectral_grid_coords.c  test_moire_coords.c  test_morlet_field_coords.c  test_multifractal_complex.c  test_optical_vortex_complex.c  test_posenc_coords.c  test_rd_seed_coords.c  test_ridged_noise_complex.c  test_sinusoidal_complex.c  test_spectral_shells_coords.c  test_steerable_wavelet_coords.c  test_traveling_wave_packet_complex.c  test_turbulence_complex.c  test_wave_modes_complex.c  test_wavevector_modes.c  test_white_noise_dt_scaling.c  test_worley_noise_complex.c  test_zeta_plane_slice.c  test_zone_plate_complex.c
tests/operators/utility/: test_fft_convert_properties.c
tests/public/: test_public_headers.c
tests/runtime/: test_step_metrics.c  test_world_continuity.c
tools/approx/: CMakeLists.txt  README.md  minimax.cpp
(+147 files in other folders)
